# cat-chatter-backend

./: .gitignore  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/config/: __init__.py
app/dao/: cat_persona.py  chat.py  persona.py  schema.py
app/domain/cat_persona/: service.py
app/domain/chat/: schema.py  service.py
app/domain/persona/: schema.py  service.py
app/infrastructure/postgres/: models.py  session.py
app/routes/: api.py  servicesfac.py
app/routes/endpoints/: chat.py  persona.py
migrations/: env.py
migrations/versions/: 72935130eace_create_cat_persona_table.py  b25062080772_add_description_column_to_chats_table.py  ee74cf3cf089_description_column_should_be_nullable.py  fb68387df8e7_chats_table_creation.py
